Bug fixes / feature request
- Due to URI problem, getting the template.hbs is now a resource stream (sorry niels)
- Added if statement in template for the ResponseRoot